--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: roboto, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -13,15 +13,21 @@ body {
 }
 
 .box {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    justify-content: space-around;
     margin-top: 88px;
     background-color: white;
-    border-radius: 10px;
+    border-radius: 36px;
 }
 
 .left {
     padding: 32px;
+    margin-top: 96px;
+}
+
+.left h1 {
+    font-weight: 900;
+
 }
 
 .list-itens {
@@ -40,7 +46,16 @@ body {
     gap: 16px;
 }
 
-
 .right {
 padding: 32px 32px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+form label {
+    font-size: 10px;
+    font-weight: 800;
 }
